# user-service

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  default.nix  package.yaml  release.nix  shell.nix  stack.yaml  user-service.cabal  user-service.cfg  user-service.nix
app/: Main.hs
src/Web/: Config.hs  Models.hs  Service.hs  Utils.hs  Validate.hs
test/: Spec.hs
