name: user-service
version: 0.1.0.0
license: BSD3
license-file:LICENSE
build-type: Simple
cabal-version: 1.12
extra-source-files: README.md

library
  exposed-modules:
      Web.Config
      Web.Models
      Web.Service
      Web.Utils
      Web.Validate
  hs-source-dirs: src
  default-extensions: OverloadedStrings
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
  build-depends:
      Spock
    , aeson
    , base >=4.7 && <5
    , configurator
    , http-types
    , monad-logger
    , persistent
    , persistent-sqlite
    , persistent-template
    , text
    , validation
    , wai
  default-language: Haskell2010

executable user-service-exe
  main-is: Main.hs
  hs-source-dirs: app
  default-extensions: OverloadedStrings
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      Spock
    , aeson
    , base >=4.7 && <5
    , text
    , user-service
  default-language: Haskell2010

test-suite user-service-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  default-extensions: OverloadedStrings
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      Spock
    , base >=4.7 && <5
    , hspec
    , hspec-wai
    , tasty
    , tasty-hspec
    , text
    , user-service
    , validation
    , wai
  default-language: Haskell2010
